// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQL is byte-stable (verbatim-port guarantee) > channelsExist 1`] = `
"
        SELECT DISTINCT LOWER(channel_name) AS channel_name
        FROM \`shopify-dw.people.slack_channels\`
        WHERE is_archived=FALSE AND is_deleted=FALSE AND LOWER(channel_name) IN ('help-payments','help-checkout-wallets')"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > findChannelOwner 1`] = `
"
        SELECT LOWER(support_slack_channel_name) AS sup, LOWER(general_slack_channel_name) AS gen,
               team_name, name_with_hierarchy, group_name, vault_id
        FROM \`shopify-dw.base.base__infra_central__org_vault_teams\`
        WHERE LOWER(support_slack_channel_name) IN ('help-checkout','checkout-eng') OR LOWER(general_slack_channel_name) IN ('help-checkout','checkout-eng')
        LIMIT 25"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > findChannels — fallback query (smart rejected) 1`] = `
"
        WITH cand AS (
          SELECT channel_id, channel_name, purpose, topic
          FROM \`shopify-dw.people.slack_channels\`
          WHERE is_archived=FALSE AND is_deleted=FALSE AND (LOWER(channel_name) LIKE '%checkout%' OR LOWER(IFNULL(purpose,'')) LIKE '%checkout%' OR LOWER(IFNULL(topic,'')) LIKE '%checkout%' OR LOWER(channel_name) LIKE '%payments%' OR LOWER(IFNULL(purpose,'')) LIKE '%payments%' OR LOWER(IFNULL(topic,'')) LIKE '%payments%') AND NOT (NOT STARTS_WITH(LOWER(channel_name),'help') AND REGEXP_CONTAINS(LOWER(channel_name),
              r'(^(incident|inc|sev|pd|pager|page|alert|alerts|tmp|temp|zzz)[-_]?[0-9])|((^|[-_])(incident|incidents|alerting|alerts|notifications|notification|firehose|deploys|pr-reviews|oncall)([-_]|$))|(bot$)|(^bot[-_])'))
           LIMIT 150
        ),
        mem AS (
          SELECT channel_id, COUNT(DISTINCT user_id) AS members
          FROM \`shopify-dw.people.slack_channel_members_daily\`
          WHERE valid_on=(SELECT MAX(valid_on) FROM \`shopify-dw.people.slack_channel_members_daily\`)
            AND channel_id IN (SELECT channel_id FROM cand) GROUP BY 1
        ),
        msg AS (
          SELECT channel_name, COUNT(DISTINCT archive_message_id) AS msgs_90d
          FROM \`shopify-dw.people.slack_messages\`
          WHERE message_at >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 90 DAY)
            AND is_bot_user=FALSE AND channel_name IN (SELECT channel_name FROM cand) GROUP BY 1
        )
        SELECT c.channel_id, c.channel_name, c.purpose, c.topic,
               IFNULL(mem.members,0) AS members, IFNULL(msg.msgs_90d,0) AS msgs_90d
        FROM cand c
        LEFT JOIN mem ON mem.channel_id=c.channel_id
        LEFT JOIN msg ON msg.channel_name=c.channel_name
        ORDER BY (LOG10(IFNULL(msg.msgs_90d,0)+1)*10 + LOG10(IFNULL(mem.members,0)+1)*5) DESC LIMIT 150"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > findChannels — smart query 1`] = `
"
        WITH cand AS (
          SELECT channel_id, channel_name, purpose, topic,
                 (CAST(REGEXP_CONTAINS(LOWER(channel_name), r'(^|[-_])checko') AS INT64) + CAST(REGEXP_CONTAINS(LOWER(channel_name), r'(^|[-_])paymen') AS INT64)) AS name_score,
                 CAST(STARTS_WITH(LOWER(channel_name),'help') AS INT64) AS help_hit
          FROM \`shopify-dw.people.slack_channels\`
          WHERE is_archived=FALSE AND is_deleted=FALSE AND (LOWER(channel_name) LIKE '%checkout%' OR LOWER(IFNULL(purpose,'')) LIKE '%checkout%' OR LOWER(IFNULL(topic,'')) LIKE '%checkout%' OR LOWER(channel_name) LIKE '%payments%' OR LOWER(IFNULL(purpose,'')) LIKE '%payments%' OR LOWER(IFNULL(topic,'')) LIKE '%payments%') AND NOT (NOT STARTS_WITH(LOWER(channel_name),'help') AND REGEXP_CONTAINS(LOWER(channel_name),
              r'(^(incident|inc|sev|pd|pager|page|alert|alerts|tmp|temp|zzz)[-_]?[0-9])|((^|[-_])(incident|incidents|alerting|alerts|notifications|notification|firehose|deploys|pr-reviews|oncall)([-_]|$))|(bot$)|(^bot[-_])'))
          ORDER BY name_score DESC, help_hit DESC LIMIT 150
        ),
        mem AS (
          SELECT channel_id, COUNT(DISTINCT user_id) AS members
          FROM \`shopify-dw.people.slack_channel_members_daily\`
          WHERE valid_on=(SELECT MAX(valid_on) FROM \`shopify-dw.people.slack_channel_members_daily\`)
            AND channel_id IN (SELECT channel_id FROM cand) GROUP BY 1
        ),
        msg AS (
          SELECT channel_name, COUNT(DISTINCT archive_message_id) AS msgs_90d
          FROM \`shopify-dw.people.slack_messages\`
          WHERE message_at >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 90 DAY)
            AND is_bot_user=FALSE AND channel_name IN (SELECT channel_name FROM cand) GROUP BY 1
        )
        SELECT c.channel_id, c.channel_name, c.purpose, c.topic,
               IFNULL(mem.members,0) AS members, IFNULL(msg.msgs_90d,0) AS msgs_90d
        FROM cand c
        LEFT JOIN mem ON mem.channel_id=c.channel_id
        LEFT JOIN msg ON msg.channel_name=c.channel_name
        ORDER BY (LOG10(IFNULL(msg.msgs_90d,0)+1)*10 + LOG10(IFNULL(mem.members,0)+1)*5) DESC LIMIT 150"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > findCommitters (org/name split) 1`] = `
"
        WITH c AS (
          SELECT github_author_id
          FROM \`shopify-dw.base.base__github__default_branch_commits\`
          WHERE committed_at >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 180 DAY)
            AND github_author_type='User' AND LOWER(repository_name)='checkout-web' AND LOWER(organization_name)='shopify'
        )
        SELECT u.username AS username, COUNT(*) AS commits
        FROM c JOIN \`shopify-dw.infrastructure.github_users\` u ON u.user_id=c.github_author_id
        GROUP BY 1 ORDER BY commits DESC LIMIT 5"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > findResponsiveness 1`] = `
"
        WITH m AS (
          SELECT channel_name, thread_ts, message_at
          FROM \`shopify-dw.people.slack_messages\`
          WHERE message_at >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 90 DAY)
            AND is_bot_user=FALSE AND thread_ts IS NOT NULL
            AND thread_ts >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 90 DAY)
            AND channel_name IN ('help-checkout','help-payments')
        ),
        t AS (
          SELECT channel_name, thread_ts, ARRAY_AGG(message_at ORDER BY message_at) AS ats, COUNT(*) AS n
          FROM m GROUP BY channel_name, thread_ts HAVING n>=2
        )
        SELECT channel_name, COUNT(*) AS threads,
               APPROX_QUANTILES(TIMESTAMP_DIFF(ats[OFFSET(1)], ats[OFFSET(0)], SECOND), 2)[OFFSET(1)] AS median_sec
        FROM t GROUP BY channel_name"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > ownSql 1`] = `
"
        WITH ch AS (
          SELECT LOWER(channel_name) AS cname, ANY_VALUE(channel_id) AS cid
          FROM \`shopify-dw.people.slack_channels\` WHERE is_archived=FALSE AND is_deleted=FALSE GROUP BY 1
        ),
        svc AS (
          SELECT 'service' AS kind, s.service_name AS entity, s.repository AS repository, s.vault_team_id AS team_id
          FROM \`shopify-dw.base.base__infra_central__services\` s WHERE LOWER(s.service_name) LIKE '%checkout%' OR LOWER(IFNULL(s.repository,'')) LIKE '%checkout%' OR LOWER(s.service_name) LIKE '%payments%' OR LOWER(IFNULL(s.repository,'')) LIKE '%payments%' LIMIT 15
        ),
        tmatch AS (
          SELECT 'team' AS kind, t2.team_name AS entity, t2.github_repo AS repository, t2.team_id AS team_id
          FROM \`shopify-dw.base.base__infra_central__org_vault_teams\` t2 WHERE LOWER(t2.team_name) LIKE '%checkout%' OR LOWER(IFNULL(t2.slug,'')) LIKE '%checkout%' OR LOWER(IFNULL(t2.github_repo,'')) LIKE '%checkout%' OR LOWER(t2.team_name) LIKE '%payments%' OR LOWER(IFNULL(t2.slug,'')) LIKE '%payments%' OR LOWER(IFNULL(t2.github_repo,'')) LIKE '%payments%' LIMIT 15
        ),
        hits AS (SELECT * FROM svc UNION ALL SELECT * FROM tmatch)
        SELECT h.kind, h.entity, h.repository, t.team_name, t.name_with_hierarchy, t.vault_id,
               t.group_name, t.general_slack_channel_name AS gen, t.support_slack_channel_name AS sup,
               cg.cid AS gen_id, cs.cid AS sup_id
        FROM hits h
        LEFT JOIN \`shopify-dw.base.base__infra_central__org_vault_teams\` t ON t.team_id = h.team_id
        LEFT JOIN ch cg ON cg.cname = LOWER(t.general_slack_channel_name)
        LEFT JOIN ch cs ON cs.cname = LOWER(t.support_slack_channel_name)
        LIMIT 20"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > resolveNamedChannels 1`] = `
"
        WITH c AS (SELECT channel_id, channel_name, purpose FROM \`shopify-dw.people.slack_channels\`
                   WHERE is_archived=FALSE AND is_deleted=FALSE AND LOWER(channel_name) IN ('help-payments','help-billing')),
        mem AS (SELECT channel_id, COUNT(DISTINCT user_id) members FROM \`shopify-dw.people.slack_channel_members_daily\`
                WHERE valid_on=(SELECT MAX(valid_on) FROM \`shopify-dw.people.slack_channel_members_daily\`) AND channel_id IN (SELECT channel_id FROM c) GROUP BY 1),
        msg AS (SELECT channel_name, COUNT(DISTINCT archive_message_id) msgs_90d FROM \`shopify-dw.people.slack_messages\`
                WHERE message_at>=TIMESTAMP_SUB(CURRENT_TIMESTAMP(),INTERVAL 90 DAY) AND is_bot_user=FALSE AND channel_name IN (SELECT channel_name FROM c) GROUP BY 1)
        SELECT c.channel_id, c.channel_name, c.purpose, IFNULL(mem.members,0) AS members, IFNULL(msg.msgs_90d,0) AS msgs_90d
        FROM c LEFT JOIN mem ON mem.channel_id=c.channel_id LEFT JOIN msg ON msg.channel_name=c.channel_name"
`;

exports[`SQL is byte-stable (verbatim-port guarantee) > suggestChannels 1`] = `
"
        SELECT channel_name
        FROM \`shopify-dw.people.slack_channels\`
        WHERE is_archived=FALSE AND is_deleted=FALSE AND STARTS_WITH(LOWER(channel_name),'help') AND (LOWER(channel_name) LIKE '%payments%')
        ORDER BY channel_name LIMIT 6"
`;
